--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,23 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "assets/bootstrap/css/bootstrap.min.css",
+              "assets/css/best-carousel-slide.css",
+              "assets/fonts/fontawesome-all.min.css",
+              "assets/fonts/font-awesome.min.css",
+              "assets/fonts/fontawesome5-overrides.min.css",
             ],
-            "scripts": []
+            "scripts": [
+              "assets/bootstrap/js/bootstrap.min.js",
+              "assets/js/tecniqueSelection.js",
+              "assets/js/CamanJS-master/dist/caman.full.min.js",
+              "assets/js/chart.min.js",
+              "assets/js/bs-init.js",
+              "assets/js/imageSelection.js",
+              "assets/js/sliderActivity.js",
+              "assets/js/theme.js"
+            ]
           },
           "configurations": {
             "production": {
